# grocerygetter

./: .env.example  .gitignore  README.md  app.py  environment.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
code/: auth.py  config.py  grocerygetter.py  kroger_api.py  recipes.py  test_creds.py
data/: schema.sql  seed_recipes.json
docs/: RECIPE_IMPORT.md  TODO.md
src/grocerygetter/: __init__.py  database.py  kroger.py  meal_planner.py  models.py  random_recipes.py  recipe_import.py  repository.py  units.py
tests/: test_meal_planner.py  test_repository.py
