[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grocerygetter"
version = "0.1.0"
description = "Recipe planning and grocery cart preparation tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "requests",
    "streamlit",
]

[tool.setuptools.packages.find]
where = ["src"]
