[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grocerygetter"
version = "0.1.0"
description = "Recipe planning and grocery cart preparation tool."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
    "streamlit>=1.59,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
